--- a/scss/foundation/_breakpoints.scss
+++ b/scss/foundation/_breakpoints.scss
@@ -1,6 +1,6 @@
-/**
-* Break Points
-* ========================== */
+// *
+// * Break Points
+// * ==========================
 
 // $breakpoints: ('xs': (min-width: 0),
 //     'sm': (min-width: 576px),
