--- a/scss/foundation/_function.scss
+++ b/scss/foundation/_function.scss
@@ -1,6 +1,6 @@
-/**
-* Functions
-* ========================== */
+// *
+// * Functions
+// * ==========================
 @use "sass:math";
 @use "./breakpoints"as bp;
 
