--- a/scss/foundation/_variable.scss
+++ b/scss/foundation/_variable.scss
@@ -1,19 +1,19 @@
-/**
-* Variables
-* ========================== */
+// *
+// * Variables
+// * ==========================
 
-/* Font */
+// Font
 $font-family : 'メイリオ', 'Meiryo', 'ＭＳ ゴシック', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
 $font-family-logo : 'Montserrat', sans-serif;
 $font-family-more : 'Montserrat', sans-serif;
 $font-family-fv : 'Courier New', Courier, monospace;
 
 
-/* Color */
+// Color
 $color-font : #000;
 $color-bg-service : #f6f6f6;
 $color-bg-footer : #a7a4a4;
 
-/* Content Size */
-$inner-width : 1200px;
-$inner-padding : 24px;
+// Content Size
+$inner-width : 75rem;
+$inner-padding : 1.5rem;
