--- a/scss/layout/footer/_l-footer.scss
+++ b/scss/layout/footer/_l-footer.scss
@@ -1,6 +1,7 @@
 /**
-* Footer
+* Footer(Layout)
 * ========================= */
 @use "../../foundation/variable" as g;
 @use "../../foundation/function" as f;
+/* 特にスタイル無し*/
 
