--- a/scss/object/utility/_u-sp-only.scss
+++ b/scss/object/utility/_u-sp-only.scss
@@ -1,10 +1,9 @@
 /**
-* Footer
+* Utility
 * ========================= */
 @use "../../foundation/variable" as g;
 @use "../../foundation/function" as f;
 
-/* Utility */
 .u-sp-only {
     @include f.mq(pc) {
         display: none;
