--- a/scss/layout/header/_l-header.scss
+++ b/scss/layout/header/_l-header.scss
@@ -1,5 +1,5 @@
 /**
-* Header
+* Header(Layout)
 * ========================= */
 @use "../../foundation/variable" as g;
 @use "../../foundation/function" as f;
