--- a/scss/object/component/_c-section-heading.scss
+++ b/scss/object/component/_c-section-heading.scss
@@ -6,7 +6,7 @@
 
 .c-section-heading {
     font-size     : 1.5rem;
-    font-family   : 'Montserrat', 'メイリオ', 'Meiryo', 'ＭＳ ゴシック', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
+    font-family   : g.$font-family;
     font-weight   : 700;
     text-transform: uppercase;
     text-align    : center;
