--- a/scss/layout/_l-footer.scss
+++ b/scss/layout/_l-footer.scss
@@ -1,7 +1,7 @@
 /**
 * Footer(Layout)
 * ========================= */
-@use "../../foundation/variable" as g;
-@use "../../foundation/function" as f;
+@use "../foundation/variable" as g;
+@use "../foundation/function" as f;
 /* 特にスタイル無し*/
 
