--- a/scss/layout/_l-header.scss
+++ b/scss/layout/_l-header.scss
@@ -1,8 +1,8 @@
 /**
 * Header(Layout)
 * ========================= */
-@use "../../foundation/variable" as g;
-@use "../../foundation/function" as f;
+@use "../foundation/variable" as g;
+@use "../foundation/function" as f;
 
 /* 最上部に固定し、スクロールに追従 
  */
