--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,22 +8,25 @@
 // *
 // * Layout
 // * =========================
-@use "./layout/header/l-header";
-@use "./layout/footer/l-footer";
+@use "./layout/l-inner";
+@use "./layout/l-header";
+@use "./layout/l-footer";
 
 // *
 // * Component
 // * =========================
 @use "./object/component/c-section-heading";
 @use "./object/component/c-more-button";
+@use "./object/component/c-cards1";
+@use "./object/component/c-card1";
+@use "./object/component/c-cards2";
+@use "./object/component/c-card2";
 
 // *
 // * Project
 // * =========================
 @use "./object/project/p-header";
-@use "./object/project/p-header__logo";
-@use "./object/project/p-header__nav";
-@use "./object/project/p-header__openbtn";
+@use "./object/project/p-nav";
 @use "./object/project/p-fv";
 @use "./object/project/p-service";
 @use "./object/project/p-works";
