--- a/scss/object/project/_p-nav.scss
+++ b/scss/object/project/_p-nav.scss
@@ -52,8 +52,10 @@
     }
 
     @include f.mq(pc) {
-        left   : 0;
-        opacity: 1;
+        &__item {
+            left   : 0;
+            opacity: 1;
+        }
     }
 
     &__item a:hover {
