--- a/scss/layout/_l-header.scss
+++ b/scss/layout/_l-header.scss
@@ -10,4 +10,6 @@
     top             : 0;
     position        : fixed;
     width           : 100%;
+    background-color: #fff;
+    z-index         : 99;
 }
