--- a/scss/object/component/_c-cards2.scss
+++ b/scss/object/component/_c-cards2.scss
@@ -7,18 +7,24 @@
     grid-template-columns: 1fr;
     column-gap           : 2.5%;
     row-gap              : 4rem;
-
+    
     @include f.mq(pc) {
         grid-template-columns: 1fr 1fr 1fr;
     }
-
+    
+    
     &__item {
         /* SP版でも757px~500pxくらいまでは巾が広いのでvwで制限 */
         width       : 70vw;
         justify-self: center;
+        transition: opacity .3s;
 
         @include f.mq(pc) {
             width: unset;
+        }
+
+        &:hover {
+            opacity: .7;
         }
     }
 }
