--- a/scss/object/component/_c-more-button.scss
+++ b/scss/object/component/_c-more-button.scss
@@ -1,10 +1,11 @@
 /**
 * More button
 * ========================= */
-@use "../../foundation/variable" as g;
-@use "../../foundation/function" as f;
+@use "../../foundation/variable"as g;
+@use "../../foundation/function"as f;
 
 .c-more-button {
+    display         : inline-block;
     font-family     : g.$font-family-more;
     font-size       : f.rem(24px);
     text-transform  : uppercase;
@@ -13,6 +14,7 @@
     background-color: transparent;
     position        : relative;
     z-index         : 2;
+    padding         : f.rem(15px) f.rem(60px) f.rem(14px);
 
     &::before {
         position        : absolute;
